fix jdk25 beautiful code